[gd_scene load_steps=17 format=2]

[ext_resource path="res://Slime.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Mobile RPG Mockup.png" type="Texture" id=2]
[ext_resource path="res://Images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://StatsPanel.gd" type="Script" id=6]
[ext_resource path="res://SwordActionButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://HealActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Rat.tscn" type="PackedScene" id=9]
[ext_resource path="res://TextboxPanel.gd" type="Script" id=12]
[ext_resource path="res://LevelUpPopup.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]
resource_name = "EndScreen"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 84, 19 ), Vector2( 84, 105 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.996644, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.147651, 0.147651, 0.147651, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[node name="Battle" type="Node"]
script = ExtResource( 4 )
enemies = [ ExtResource( 9 ), ExtResource( 1 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 45, 29 )

[node name="Slime" parent="EnemyPosition" instance=ExtResource( 1 )]

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.243137 )
position = Vector2( 45, 80 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_right = 90.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
margin_left = 10.0
margin_top = 13.0
margin_right = 80.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 13 )
mouse_filter = 1
text = "ENTER NEXT ROOM"

[node name="LevelUpButton" type="Button" parent="UI/CenterContainer"]
margin_left = 10.0
margin_top = 13.0
margin_right = 80.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 13 )
mouse_filter = 1
text = "LEVEL UP!"

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 52.0
margin_right = 87.0
margin_bottom = 71.0
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_right = 25.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 58.0
margin_right = 83.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "MP
10"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/StatsPanel"]
anims/EndScreen = SubResource( 1 )

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -1.0
margin_top = 137.0
margin_right = 91.0
margin_bottom = 162.0
mouse_filter = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 90.0
margin_bottom = 22.0
mouse_filter = 2
custom_styles/normal = SubResource( 2 )
custom_constants/line_separation = 3
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpBar" type="ProgressBar" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 11.0
margin_right = 89.0
margin_bottom = 22.0
max_value = 25.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="UI/TextboxPanel"]
margin_left = 28.0
margin_right = 66.0
margin_bottom = 12.0
text = "LEVEL: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 9.0
margin_top = 73.0
margin_right = 81.0
margin_bottom = 134.0
mouse_filter = 0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 7 )]
margin_right = 32.0
margin_bottom = 13.0
text = "SWORD"

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 13.0

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 3 )

[node name="LevelUpPopup" type="PopupPanel" parent="."]
visible = true
margin_right = 90.0
margin_bottom = 136.0
popup_exclusive = true
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelUpPopup"]
position = Vector2( 45.125, 68.5 )
scale = Vector2( 0.0438232, 137 )
texture = SubResource( 5 )

[node name="LevelUp" type="VBoxContainer" parent="LevelUpPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = -9.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPLabel" type="Label" parent="LevelUpPopup/LevelUp"]
margin_right = 73.0
margin_bottom = 12.0
align = 1

[node name="HPup" type="HBoxContainer" parent="LevelUpPopup/LevelUp"]
margin_top = 16.0
margin_right = 73.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HPcur" type="Label" parent="LevelUpPopup/LevelUp/HPup"]
margin_right = 34.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="incHP" type="Button" parent="LevelUpPopup/LevelUp/HPup"]
margin_left = 38.0
margin_right = 73.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+5"

[node name="APup" type="HBoxContainer" parent="LevelUpPopup/LevelUp"]
margin_top = 45.0
margin_right = 73.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="APcur" type="Label" parent="LevelUpPopup/LevelUp/APup"]
margin_right = 34.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="incAP" type="Button" parent="LevelUpPopup/LevelUp/APup"]
margin_left = 38.0
margin_right = 73.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+1"

[node name="MPup" type="HBoxContainer" parent="LevelUpPopup/LevelUp"]
margin_top = 74.0
margin_right = 73.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MPcur" type="Label" parent="LevelUpPopup/LevelUp/MPup"]
margin_right = 34.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="incMP" type="Button" parent="LevelUpPopup/LevelUp/MPup"]
margin_left = 38.0
margin_right = 73.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+2"

[node name="Finish" type="HBoxContainer" parent="LevelUpPopup/LevelUp"]
margin_top = 103.0
margin_right = 73.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResetButton" type="Button" parent="LevelUpPopup/LevelUp/Finish"]
margin_right = 34.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "RESET"

[node name="ConfirmButton" type="Button" parent="LevelUpPopup/LevelUp/Finish"]
margin_left = 38.0
margin_right = 73.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CONFIRM"
[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="exp_changed" from="PlayerStats" to="UI/TextboxPanel" method="_on_PlayerStats_exp_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="lvl_changed" from="PlayerStats" to="UI/TextboxPanel" method="_on_PlayerStats_lvl_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="pressed" from="UI/CenterContainer/LevelUpButton" to="LevelUpPopup" method="_on_LevelUpButton_pressed"]
[connection signal="pressed" from="LevelUpPopup/LevelUp/HPup/incHP" to="LevelUpPopup" method="_on_incHP_pressed"]
[connection signal="pressed" from="LevelUpPopup/LevelUp/APup/incAP" to="LevelUpPopup" method="_on_incAP_pressed"]
[connection signal="pressed" from="LevelUpPopup/LevelUp/MPup/incMP" to="LevelUpPopup" method="_on_incMP_pressed"]
[connection signal="pressed" from="LevelUpPopup/LevelUp/Finish/ResetButton" to="LevelUpPopup" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="LevelUpPopup/LevelUp/Finish/ConfirmButton" to="LevelUpPopup" method="_on_ConfirmButton_pressed"]
